# dealii-ns-gls

./: CMakeLists.txt  Makefile  README.MD  main.cc  performance.cc
.github/workflows/: indentation.yml
doc/: .gitignore  nse.tex
doc/Macros/: mydef.sty  remarks.sty
include/: Makefile  config.h  dof_tools.h  grid_cylinder.h  grid_cylinder_old.h  matrix_free_tools.h  multigrid.cc  multigrid.h  operator_base.cc  operator_base.h  operator_ns.cc  operator_ns.h  preconditioner.cc  preconditioner.h  revision.h.in  simulation.cc  simulation.h  solver_l.cc  solver_l.h  solver_nl.cc  solver_nl.h  time_integration.cc  time_integration.h  timer.h
input/: README.MD  input_channel.json  input_cylinder.json  input_cylinder_dealii.json  input_cylinder_lethe.json  input_cylinder_lethe2.json  input_cylinder_old.json  input_hoffmann_2D_Re3900.json  input_hoffmann_2D_ReInf.json  input_hoffmann_2D_ReInf.py  input_hoffmann_2D_ReInf.sh  input_hoffmann_2D_ReInf_2D.sh  input_hoffmann_2D_ReInf_3D.sh  input_hoffmann_3D_Re3900.json  input_hoffmann_3D_Re3900.json-metadata  input_sphere_amg.json  input_sphere_direct.json  input_turek_2D_Re100.json  input_turek_2D_Re20.json  input_turek_2D_Re20_stat.json  input_turek_2D_Re3900.json  input_turek_3D_Re100.json  input_turek_3D_Re20_stat.json  rotation.json
mesh/: sphere.msh
